# Swish

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: main.yml
src/: errors.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/chunks/: mod.rs
src/api/handlers/: mod.rs
src/localfiles/: mod.rs
src/localfiles/localfile/: mod.rs
src/localfiles/parameters/: mod.rs
src/swissfiles/: mod.rs
src/swissfiles/swissfile/: mod.rs
src/swissfiles/uploadparameters/: mod.rs
tests/: integrations.rs
