[package]
name = "swish"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
curl = "0.4.46"
indicatif = "0.17.8"
log = "0.4.21"
regex = "1.10.3"
serde_json = "1.0.114"
sha2 = "0.10.8"
simple_logger = "4.3.3"
openssl-sys = { version = "0.9", features = ["vendored"] }
